content/_generated-doc/3.6/config/quarkus-kubernetes-config-group-resources-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-resources-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-resources-config_configuration]]link:#quarkus-kubernetes-config-group-resources-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.limits.cpu[quarkus.knative.resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.limits.memory[quarkus.knative.resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.requests.cpu[quarkus.knative.resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.resources.requests.memory[quarkus.knative.resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.limits.cpu[quarkus.knative.init-containers."init-containers".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.limits.memory[quarkus.knative.init-containers."init-containers".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.requests.cpu[quarkus.knative.init-containers."init-containers".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.init-containers.-init-containers-.resources.requests.memory[quarkus.knative.init-containers."init-containers".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.limits.cpu[quarkus.knative.containers."containers".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.limits.memory[quarkus.knative.containers."containers".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.requests.cpu[quarkus.knative.containers."containers".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.knative.containers.-containers-.resources.requests.memory[quarkus.knative.containers."containers".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_CONTAINERS__CONTAINERS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.limits.cpu[quarkus.kubernetes.resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.limits.memory[quarkus.kubernetes.resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.requests.cpu[quarkus.kubernetes.resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.resources.requests.memory[quarkus.kubernetes.resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.limits.cpu[quarkus.kubernetes.init-containers."init-containers".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.limits.memory[quarkus.kubernetes.init-containers."init-containers".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.requests.cpu[quarkus.kubernetes.init-containers."init-containers".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.init-containers.-init-containers-.resources.requests.memory[quarkus.kubernetes.init-containers."init-containers".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.limits.cpu[quarkus.kubernetes.sidecars."sidecars".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.limits.memory[quarkus.kubernetes.sidecars."sidecars".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.requests.cpu[quarkus.kubernetes.sidecars."sidecars".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.kubernetes.sidecars.-sidecars-.resources.requests.memory[quarkus.kubernetes.sidecars."sidecars".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_SIDECARS__SIDECARS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.limits.cpu[quarkus.openshift.resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.limits.memory[quarkus.openshift.resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.requests.cpu[quarkus.openshift.resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.resources.requests.memory[quarkus.openshift.resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.limits.cpu[quarkus.openshift.init-containers."init-containers".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.limits.memory[quarkus.openshift.init-containers."init-containers".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.requests.cpu[quarkus.openshift.init-containers."init-containers".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.init-containers.-init-containers-.resources.requests.memory[quarkus.openshift.init-containers."init-containers".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_INIT_CONTAINERS__INIT_CONTAINERS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.limits.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.limits.cpu[quarkus.openshift.sidecars."sidecars".resources.limits.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_LIMITS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_LIMITS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.limits.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.limits.memory[quarkus.openshift.sidecars."sidecars".resources.limits.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_LIMITS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_LIMITS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.requests.cpu]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.requests.cpu[quarkus.openshift.sidecars."sidecars".resources.requests.cpu]`


[.description]
--
CPU Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_REQUESTS_CPU+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_REQUESTS_CPU+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.requests.memory]]`link:#quarkus-kubernetes-config-group-resources-config_quarkus.openshift.sidecars.-sidecars-.resources.requests.memory[quarkus.openshift.sidecars."sidecars".resources.requests.memory]`


[.description]
--
Memory Requirements

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_REQUESTS_MEMORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_SIDECARS__SIDECARS__RESOURCES_REQUESTS_MEMORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===